--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,29 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # Firebase
+  firebase_core: ^3.6.0
+  
+  # State Management
+  provider: ^6.1.2
+  flutter_riverpod: ^2.6.1
+  
+  # Navigation
+  go_router: ^14.6.2
+  
+  # HTTP & Email
+  http: ^1.2.2
+  mailer: ^6.0.1
+  
+  # JSON Serialization
+  json_annotation: ^4.9.0
+  
+  # Calendar
+  table_calendar: ^3.1.2
+  
+  # Image handling
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +68,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  
+  # Code Generation
+  build_runner: ^2.4.13
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
