--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Sparktracks Mvp</string>
+	<string>Sparktracks</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Sparktracks needs access to your camera to take profile photos and upload class images.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Sparktracks needs access to your photo library to upload profile photos and class images.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Sparktracks needs access to your microphone for video messaging features.</string>
 </dict>
 </plist>
