--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   image_picker: ^1.1.2
   url_launcher: ^6.3.2
   intl: ^0.20.2
+  
+  # CSV Export
+  csv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
