--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,10 @@ dependencies:
   
   # CSV Export
   csv: ^6.0.0
+  
+  # Animations & Celebrations
+  confetti: ^0.7.0
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
